@@ -35,7 +35,7 @@ class TemplatesModelStyles extends JModelList
 		$search = $app->getUserStateFromRequest($this->context.'.filter.search', 'filter_search');
 		$this->setState('filter.search', $search);
 
-		$template = $app->getUserStateFromRequest($this->context.'.filter.template', 'filter_template', '0', 'word');
+		$template = $app->getUserStateFromRequest($this->context.'.filter.template', 'filter_template', '0', 'cmd');
 		$this->setState('filter.template', $template);
 
 		$clientId = $app->getUserStateFromRequest($this->context.'.filter.client_id', 'filter_client_id', null);
